# fine-tune-train_sam2

./: .gitignore  COMPARE.py  TRAIN.py  TRAIN_multi_image_batch.py  VALIDATE.py  data_loader.py  pyproject.toml  test_data_loader.py
finetuned_sam2_models/: sam2_hiera_tiny_finetuned_decoder_validation_metrics.json
notebooks/: image_predictor_example_export.py
