[tool.poetry]
name = "sam2"
version = "1.0"
description = "SAM 2: Segment Anything in Images and Videos"
authors = ["Meta AI <segment-anything@meta.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/facebookresearch/segment-anything-2"
# homepage = "Optional: Add homepage URL if different from repository"

[tool.poetry.dependencies]
python = ">=3.10.0"
torch = ">=2.3.1"
torchvision = ">=0.18.1"
numpy = ">=1.24.4"
tqdm = ">=4.66.1"
hydra-core = ">=1.3.2"
iopath = ">=0.1.10"
pillow = ">=9.4.0"

[tool.poetry.group.demo.dependencies]
matplotlib = ">=3.9.1"
jupyter = ">=1.0.0"
opencv-python = ">=4.7.0"

[tool.poetry.group.dev.dependencies]
black = "==24.2.0"
usort = "==1.0.2"
ufmt = "==2.0.0b2"

[build-system]
requires = [
    "setuptools>=61.0",
    "torch>=2.3.1",
    "cython" # Added cython as it's often needed for CUDA extensions
    ]
build-backend = "setuptools.build_meta"
